--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
       </ul>
 
       <div class="header-btn">
-        <a href="#" class="btn-contact" id="btn-home">Contato</a>
+        <a
+          href="https://wa.me/5567998780937?"
+          class="btn-contact"
+          target="_blank"
+          class="btn-contact"
+          id="btn-home"
+          >Contato</a
+        >
       </div>
     </header>
 
@@ -38,7 +45,13 @@
           com um sistema autônomo e inteligente.
         </p>
 
-        <a href="#" class="btn-contact">Entrar em Contato</a>
+        <a
+          href="https://wa.me/5567998780937?"
+          class="btn-contact"
+          target="_blank"
+          class="btn-contact"
+          >Entrar em Contato</a
+        >
       </div>
 
       <div class="form-container">
@@ -99,7 +112,12 @@
             controle, de maneira autônoma e eficiente.
           </p>
 
-          <a href="#" class="btn-contact">Entrar em Contato</a>
+          <a
+            href="https://wa.me/5567998780937?"
+            class="btn-contact"
+            target="_blank"
+            >Entrar em Contato</a
+          >
         </div>
       </div>
     </section>
